--- a/js assignment/assignment6.js/assignment10.html
+++ b/js assignment/assignment6.js/assignment10.html
@@ -1,22 +1,28 @@
+<html>
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment10</title>
-    <script>
-    function check() {
-    var array_Clone_to = function(arra1) {
-    return arra1.slice(0);
-    };
-  document.getElementById("result").innerHTML += (array_Clone_to([4, 5, 9, 10])); 
 
-  document.getElementById("result").innerHTML += (array_Clone_to([43, 4, 6, 8]));
-}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Assignment10</title>
+</head>
+
+<body>
+  <script>
+    var arrayClone = [];
+    var array = [4, 2, 6, 5];
+
+    for (var i = 0; i < array.length; i++) {
+      arrayClone.push(array[i]);
+    }
+
+    document.write("cloned array is : ");
+    for (var i = 0; i < (arrayClone.length); i++) {
+      document.write(arrayClone[i] + " ");
+    }
+
   </script>
-  </head>
-  <body>
-      <button id="subm" type="button" onclick="check()">Result</button>
-      <h3 id="result"></h3>
-  </body>
+</body>
+
 </html>
